View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032784 | Open CASCADE | OCCT:Application Framework | public | 2022-01-18 16:48 | 2023-03-19 18:23 |
Reporter | drazmyslovich | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.1 | Fixed in Version | 7.6.1 | ||
Summary | 0032784: BinXCAF fails to load documents containing the shapes with scaled/mirrored location | ||||
Description | Try to load the document, which was created and saved in the previous OCCT version, containing some shapes with scaled/mirrored locations (one such document is attached to the ticket) | ||||
Steps To Reproduce | pload ALL XOpen mirrored.xbf | ||||
Tags | No tags attached. | ||||
Test case number | bugs/xde/bug32784 | ||||
child of | 0027457 | closed | Open CASCADE | Modeling - Raise exception if scaled transformation is used for shape location |
|
mirrored.xbf (2,038,133 bytes) |
|
Branch CR0032784 has been created by drazmyslovich. SHA-1: c13340712d65897373cbb85e5bb9d8785c3109e9 Detailed log of new commits: Author: Dzmitry Razmyslovich Date: Tue Jan 18 14:52:39 2022 +0100 0032784: BinXCAF fails to load documents containing the shapes with scaled/mirrored location A flag not to raise an exception is used on reading of an XCAF document. If such a shape with scaling transformation is stored in the document, it should be read. |
|
Dear msv, please, review the committed patch. We would appreciate, if it can be included into 7.6.1. Are you able also to let us know the current schedule for 7.6.1? Is it going to be released soon? Regards, Dima |
|
Branch CR0032784 has been updated forcibly by msv. SHA-1: d2300533839f6222b9b77bb02836520ccd2c5843 |
|
Test job http://jenkins-test-occt/view/CR0032784-master-MSV/view/COMPARE/ |
|
Dear Dima, 7.6.1 will probably be released in the beginning of Feb. |
|
Branch CR0032784 has been updated forcibly by msv. SHA-1: d97beda476cfc47570cff0d1c5fb4687426b5980 |
|
Branch CR0032784 has been updated forcibly by msv. SHA-1: e7cd84e644a0aaa3abe2d8c62ffbd0275fe90154 |
|
For integration occt - CR0032784 products - none |
|
Combination - OCCT branch : IR-2022-01-21 master SHA - 5614b1369a232f43e59cb9be4f5f8efd2075608d 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-01-21 SHA - 6c9eed61a7023644fdd1361491a49abf318c0d20 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18406.870000000446 / 18505.100000000388 [-0.53%] Products Total CPU difference: 11642.890000000107 / 11656.240000000102 [-0.11%] Windows-64-VC14: OCCT Total CPU difference: 20282.578125 / 20270.375 [+0.06%] Products Total CPU difference: 13127.640625 / 13139.84375 [-0.09%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR0032784 has been deleted by mnt. SHA-1: e7cd84e644a0aaa3abe2d8c62ffbd0275fe90154 |
occt: master d7dac7fc 2022-01-18 16:52:39 Committer: |
0032784: BinXCAF fails to load documents containing the shapes with scaled/mirrored location A flag not to raise an exception is used on reading of an XCAF document. If such a shape with scaling transformation is stored in the document, it should be read. |
Affected Issues 0032784 |
|
mod - src/BinMNaming/BinMNaming_NamedShapeDriver.cxx | Diff File | ||
add - tests/bugs/xde/bug32784 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-01-18 16:48 | drazmyslovich | New Issue | |
2022-01-18 16:48 | drazmyslovich | Assigned To | => msv |
2022-01-18 16:50 | drazmyslovich | Relationship added | child of 0027457 |
2022-01-18 16:50 | drazmyslovich | Note Added: 0106445 | |
2022-01-18 16:50 | drazmyslovich | File Added: mirrored.xbf | |
2022-01-18 16:52 | git | Note Added: 0106446 | |
2022-01-18 16:54 | drazmyslovich | Status | new => resolved |
2022-01-18 16:54 | drazmyslovich | Note Added: 0106447 | |
2022-01-18 17:04 |
|
Category | OCCT:Data Exchange => OCCT:Application Framework |
2022-01-18 17:36 | git | Note Added: 0106448 | |
2022-01-18 17:39 |
|
Note Added: 0106449 | |
2022-01-18 17:45 |
|
Note Added: 0106450 | |
2022-01-18 21:10 | git | Note Added: 0106459 | |
2022-01-18 21:27 | git | Note Added: 0106460 | |
2022-01-18 22:57 |
|
Assigned To | msv => bugmaster |
2022-01-18 22:57 |
|
Status | resolved => reviewed |
2022-01-18 22:57 |
|
Note Added: 0106462 | |
2022-01-22 11:46 |
|
Status | reviewed => tested |
2022-01-22 11:46 |
|
Note Added: 0106520 | |
2022-01-22 11:47 |
|
Test case number | => bugs/xde/bug32784 |
2022-01-22 12:09 |
|
Changeset attached | => occt master d7dac7fc |
2022-01-22 12:17 | bugmaster | Status | tested => verified |
2022-01-22 12:17 | bugmaster | Resolution | open => fixed |
2022-01-22 12:40 | git | Note Added: 0106525 | |
2023-03-19 18:23 | vglukhik | Status | verified => closed |
2023-03-19 18:23 | vglukhik | Fixed in Version | => 7.6.1 |