0032784: BinXCAF fails to load documents containing the shapes with scaled/mirrored location

A flag not to raise an exception is used on reading of an XCAF document. If such a shape with scaling transformation is stored in the document, it should be read.